<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/initialText"
        android:textSize="50sp"
        android:gravity="end|bottom"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_7"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_8"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_9"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/divide"
            android:textSize="30dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_4"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_5"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_6"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/multiply"
            android:textSize="30dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_1"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_2"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_3"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/minus"
            android:textSize="35dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/clr"
            android:textSize="25dp"
            android:onClick="onClear"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/_0"
            android:textSize="30dp"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/btnModule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/module"
            android:textSize="30dp"
            android:onClick="onModule"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/plus"
            android:textSize="30dp"
            android:onClick="onOperator"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/delete"
            android:textSize="30dp"
            android:onClick="onDeleteLast"/>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/dot"
            android:textSize="30dp"
            android:onClick="onDecimal"/>
        <Button
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/btnMargin"
            android:text="@string/result"
            android:textSize="30dp"
            android:onClick="onResult"/>
    </LinearLayout>

</LinearLayout>